[package]
name = "blakebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {git="https://github.com/serenity-rs/serenity.git", branch="current", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version="1.17", features=["macros", "rt-multi-thread"]}
rand = "0.8"
serde_json = "1.0"
serde = {version = "1.0", features =["derive"]}